# sonic-cpp

./: .bazelproject  .bazelrc  .codespellrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.github/workflows/: benchmark_comment.yml  benchmark_compare.yml  clang-format-check.yml  linux-clang.yml  linux-gcc.yml  test.yml  test_arm.yml  test_coverage.yml  test_x86.yml
bazel/: cJSON.BUILD  gflags.BUILD  gtest.BUILD  rapidjson.BUILD  simdjson.BUILD  yyjson.BUILD
benchmark/: CMakeLists.txt  cjson.hpp  json.h  jsoncpp.hpp  main.cpp  ondemand.hpp  rapidjson.hpp  rapidjson_sax.hpp  simdjson.hpp  sonic.hpp  yyjson.hpp
cmake/: external.cmake  set_arch_flags.cmake
docs/: usage.md
example/: addmember.cpp  at_pointer.cpp  check_error_offset.cpp  check_parse_result.cpp  create_and_destroy_map.cpp  get_and_set  get_and_set.cpp  parse_and_serialize.cpp  parse_ondemand.cpp  parse_schema.cpp  parseondemand.cpp
fuzz/: CMakeLists.txt  fuzz.cpp
include/sonic/: allocator.h  error.h  macro.h  sonic.h  string_view.h  writebuffer.h
include/sonic/dom/: dynamicnode.h  flags.h  generic_document.h  genericnode.h  handler.h  json_pointer.h  jsonpath.h  lazynode.h  parser.h  schema_handler.h  serialize.h  type.h
include/sonic/experiment/: lazy_update.h
include/sonic/internal/: atof_native.h  ftoa.h  haswell.h  itoa.h  parse_number_normal_fast.h  quote.h  simd.h  simd_str2int.h  skip.h  stack.h  unicode.h  utils.h
include/sonic/internal/arch/: simd_base.h  simd_dispatch.h  simd_itoa.h  simd_quote.h  simd_skip.h  simd_str2int.h  sonic_cpu_feature.h
include/sonic/internal/arch/avx2/: base.h  itoa.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/avx512/: base.h  itoa.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/common/: base.h  quote_common.h  quote_tables.h  skip_common.h  unicode_common.h
include/sonic/internal/arch/common/arm_common/: base.h  itoa.h  quote.h  simd.h  skip.h  skip.inc.h  str2int.h
include/sonic/internal/arch/common/riscv_common/: base.h  skip.inc.h
include/sonic/internal/arch/common/x86_common/: itoa.h  quote.h  quote.inc.h  skip.h  skip.inc.h
include/sonic/internal/arch/neon/: base.h  itoa.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/riscv/: base.h  itoa.h  quote.h  simd.h  skip.h  skip.inc.h  str2int.h  unicode.h
include/sonic/internal/arch/rvv-128/: base.h  itoa.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/sse/: base.h  itoa.h  quote.h  simd.h  skip.h  str2int.h  str2int_impl.h  unicode.h
include/sonic/internal/arch/sve/: base.h  itoa.h  quote.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/sve-256/: base.h  itoa.h  quote.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/sve2-128/: base.h  itoa.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
include/sonic/internal/arch/x86_ifuncs/: base.h  ifunc_macro.h  itoa.h  quote.h  skip.h  str2int.h
include/sonic/jsonpath/: dom.h  dump.h  jsonpath.h  ondemand.h
scripts/: bazel_common.sh  run_cmake.sh  run_coverage.sh  unittest.sh
scripts/tools/: compare-benchmark.py  draw-decode-encode.py  draw-png.py
testdata/: book.json  citm_catalog.json  gsoc-2018.json  lottie.json  poet.json  twitter.json  twitterescaped.json
testdata/num/: float-1.txt  float-4.txt  float-8.txt
tests/: CMakeLists.txt  allocator_test.cpp  assert_test.cpp  document_test.cpp  error_test.cpp  exp_update_test.cpp  ftoa_test.cpp  itoa_test.cpp  json_pointer_test.cpp  json_tuple_test.cpp  jsonpath_test.cpp  memcmp_test.cpp  node_test.cpp  number_test.cpp  parse_schema_test.cpp  parsenumber_test.cpp  parser_oom_test.cpp  quote_test.cpp  skip_test.cpp  string_view_test.cpp  stringblock_test.cpp  utils.h  writebuffer_test.cpp
