package(default_visibility = ["//visibility:public"])
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

common_copts = ['-mavx2', '-mbmi', '-mpclmul']
sanitize_copts = ['-fsanitize=address,undefined', '-fsanitize-recover=address']

avx2_copts = ['-mavx2', '-mbmi', '-mpclmul', '-mlzcnt']
sse_copts = ['-msse', '-msse2', '-msse4.1', '-msse4.2','-mpclmul']
arm_copts = ['-march=armv8-a']
apple_silicon_copts = [ '-mcpu=apple-m1' ]
sve2_copts = ['-march=armv8-a+sve2', '-msve-vector-bits=128']
default_copts = ['-march=native']
benchmark_copts = ['-O3', '-DNDEBUG', '-std=c++17']
static_dispatch_copts = []
dynamic_dispatch_copts = ['-DSONIC_DYNAMIC_DISPATCH=1']
macos_version_copts = select({
    ":is_macos": ["-mmacosx-version-min=10.15"],
    "//conditions:default": [],
})
no_san_linkopts = []
gcc_san_linkopts = ['-lasan']
clang_san_linkopts = ['-fsanitize-link-c++-runtime']
filesystem_linkopts = select({
    ":is_macos": [],
    "//conditions:default": ["-lstdc++fs"],
})

string_flag(
    name = "sonic_arch",
    build_setting_default = "default",
)

string_flag(
    name = "sonic_dispatch",
    build_setting_default = "static",
)

string_flag(
    name = "sonic_sanitizer",
    build_setting_default = "no",
)

config_setting(
    name = "arm_build",
    flag_values = {":sonic_arch": "arm"},
)

config_setting(
    name = "sse_build",
    flag_values = {":sonic_arch": "westmere"},
)
config_setting(
    name = "avx2_build",
    flag_values = {":sonic_arch": "haswell"},
)

config_setting(
    name = "sve2_build",
    flag_values = {":sonic_arch": "sve2"},
)

config_setting(
    name = "apple_silicon_build",
    values = {"cpu": "darwin_arm64"},
)

config_setting(
    name = "static_dispatch",
    flag_values = {":sonic_dispatch": "static"},
)

config_setting(
    name = "dynamic_dispatch",
    flag_values = {":sonic_dispatch": "dynamic"},
)

config_setting(
    name = "no_san",
    flag_values = {":sonic_sanitizer": "no"},
)

config_setting(
    name = "gcc_san",
    flag_values = {":sonic_sanitizer": "gcc"},
)

config_setting(
    name = "clang_san",
    flag_values = {":sonic_sanitizer": "clang"},
)

config_setting(
    name = "is_macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
)

cc_library(
    name = "string_view",
    hdrs = glob(["include/thirdparty/**/*.h"]),
)

cc_library(
    name = "sonic-cpp",
    hdrs = glob([
        "include/sonic/*",
        "include/sonic/**/*",
    ]),
    deps = [":string_view"],
    includes = ["include"],
)

cc_binary(
    name = "benchmark",
    srcs = glob([
            "benchmark/*.cpp",
            "benchmark/*.h",
            "benchmark/*.hpp",
    ]),
    data = glob(["testdata/*.json"]),
    deps = [
        ":sonic-cpp",
        "@google_benchmark//:benchmark",
        "@rapidjson",
        "@cJSON",
        "@yyjson",
        "@simdjson",
        "@jsoncpp//:jsoncpp",
    ],
    # copts = common_copts + ['-DNDEBUG', '-std=c++17'],
    copts = select({
                "arm_build": arm_copts + benchmark_copts,
                "sve2_build": sve2_copts + benchmark_copts,
                "sse_build": sse_copts + benchmark_copts,
                "avx2_build": avx2_copts + benchmark_copts,
                "apple_silicon_build": apple_silicon_copts + benchmark_copts,
                "//conditions:default": default_copts + benchmark_copts,
            }) +\
            macos_version_copts +\
            select({
                "static_dispatch": static_dispatch_copts,
                "dynamic_dispatch": dynamic_dispatch_copts,
            }),
    linkopts = filesystem_linkopts,
)

cc_test(
    name = "unittest",
    srcs = glob([
        "tests/*.cpp",
        "include/sonic/*",
        "include/sonic/**/*",
    ]),
    deps = [
        ":string_view",
        "@googletest//:gtest_main",
    ],
   data = glob([
        "testdata/*.json",
        "testdata/num/*",
    ]),
    linkopts = filesystem_linkopts + ['-fstack-protector-all'] +\
        select({
            "no_san": [],
            "gcc_san": sanitize_copts + gcc_san_linkopts,
            "clang_san": sanitize_copts + clang_san_linkopts,
        }),
    copts = [
        '-O3', '-g', '-UNDEBUG',
        '-fstack-protector-all',
        '-Iinclude', '-Wall', '-Wextra', '-Werror',
    ]  + \
        select({
            "no_san": [],
            "gcc_san": sanitize_copts,
            "clang_san": sanitize_copts,
        }) + \
        select({
            "arm_build": arm_copts + benchmark_copts,
            "sve2_build": sve2_copts + benchmark_copts,
            "sse_build": sse_copts + benchmark_copts,
            "avx2_build": avx2_copts + benchmark_copts,
            "apple_silicon_build": apple_silicon_copts + benchmark_copts,
            "//conditions:default": default_copts + benchmark_copts,
        }) +\
        macos_version_copts +\
        select({
            "static_dispatch": static_dispatch_copts,
            "dynamic_dispatch": dynamic_dispatch_copts,
        }),
)

cc_test(
    name = "unittest-clang",
    srcs = glob([
            "tests/*.cpp",
            "include/sonic/*",
            "include/sonic/**/*",
        ]),
    deps = [
        ":string_view",
        "@googletest//:gtest_main",
    ],
    data = glob([
        "testdata/*.json",
        "testdata/num/*",
    ]),
    linkopts = sanitize_copts + filesystem_linkopts + [
        '-fstack-protector-all',
    ],
    copts = common_copts + sanitize_copts + [
        '-O3', '-g', '-UNDEBUG', '-std=c++14',
        '-fstack-protector-all',
        '-Iinclude', '-Wall', '-Wextra', '-Werror',
    ],
)

cc_test(
    name = "unittest-arm",
    srcs = glob([
            "tests/*.cpp",
            "include/sonic/*",
            "include/sonic/**/*",
        ]),
    deps = [
        ":string_view",
        "@googletest//:gtest_main",
    ],
    data = glob([
        "testdata/*.json",
        "testdata/num/*",
    ]),
    linkopts = sanitize_copts + [
        '-fstack-protector-all',
        '-fsanitize-link-c++-runtime'
    ],
    copts = sanitize_copts + [
        '-O3', '-g', '-UNDEBUG', '-std=c++14', '-march=armv8-a',
        '-fstack-protector-all',
        '-Iinclude', '-Wall', '-Wextra', '-Werror',
    ],
)

cc_test(
    name = "unittest-sse",
    srcs = glob([
            "tests/*.cpp",
            "include/sonic/*",
            "include/sonic/**/*",
        ]),
    deps = [
        ":string_view",
        "@googletest//:gtest_main",
    ],
    data = glob([
        "testdata/*.json",
        "testdata/num/*",
    ]),
    linkopts = sanitize_copts + filesystem_linkopts + [
        '-fstack-protector-all',
        '-fsanitize-link-c++-runtime'
    ],
    copts = sanitize_copts + [
        '-O3', '-g', '-UNDEBUG', '-std=c++14', '-march=westmere',
        '-fstack-protector-all',
        '-Iinclude', '-Wall', '-Wextra', '-Werror',
    ],
)

cc_test(
    name = "unittest-gcc-coverage",
    srcs = glob([
        "tests/*.cpp",
    ]),
    deps = [
        ":sonic-cpp",
        "@googletest//:gtest_main",
    ],
    data = glob([
        "testdata/*.json",
        "testdata/num/*",
    ]),
    linkopts = filesystem_linkopts + [
        '-lgcov', '-fprofile-arcs', '-ftest-coverage',
    ],
    copts = common_copts + [
        '-O0', '-g', '-UNDEBUG', '-std=c++17',
        '-Iinclude',
        '-fprofile-arcs', '-ftest-coverage',
    ],
)
