###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "google_benchmark", version = "1.9.1")
bazel_dep(name = "googletest", version = "1.16.0")

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

new_git_repository(
    name = "rapidjson",
    branch = "master",
    build_file = "//:bazel/rapidjson.BUILD",
    remote = "https://github.com/Tencent/rapidjson.git",
)

new_git_repository(
    name = "cJSON",
    branch = "master",
    build_file = "//:bazel/cJSON.BUILD",
    remote = "https://github.com/DaveGamble/cJSON.git",
)

new_git_repository(
    name = "simdjson",
    branch = "master",
    build_file = "//:bazel/simdjson.BUILD",
    remote = "https://github.com/simdjson/simdjson.git",
)

new_git_repository(
    name = "yyjson",
    branch = "master",
    build_file = "//:bazel/yyjson.BUILD",
    remote = "https://github.com/ibireme/yyjson.git",
)

git_repository(
    name = "jsoncpp",
    branch = "master",
    remote = "https://github.com/open-source-parsers/jsoncpp",
)