###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "yyjson", version = "0.10.0")
bazel_dep(name = "cjson", version = "1.7.19-0.20240923110858-12c4bf1986c2.bcr.3")
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "gflags", version = "2.2.2")

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

new_git_repository(
    name = "simdjson",
    branch = "v4.2.4",
    build_file = "//:bazel/simdjson.BUILD",
    remote = "https://github.com/simdjson/simdjson.git",
)
